GLDisplay::create_context() has wrong type for other_context (it should be optional)
In gstreamer-gl v.0.19.5 the signature for GLDisplay::create_context()
looks like:
fn create_context(
&self,
other_context: &impl IsA<GLContext>
) -> Result<GLContext, Error>
Expected:
fn create_context(
&self,
other_context: Option<&impl IsA<GLContext>>
) -> Result<GLContext, Error>
The gst_gl_display_add_context
function is totally okay with being passed NULL as the other_context
parameter. As far as I can tell from the GST_DEBUG="gldisplay:5"
logs that is even the way the function is most often used. The problem might be that gst_gl_display_add_context
doesn't explicitly tag the other_context
argument as nullable? But regardless, changing the Rust should be okay.