gldisplay: Mark `gst_gl_display_create_context()` `other_context` parameter as nullable

See https://gitlab.freedesktop.org/gstreamer/gstreamer-rs/-/issues/438

Part-of: <https://gitlab.freedesktop.org/gstreamer/gstreamer/-/merge_requests/3835>